--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>210K Path Planner</title>
+    <title>3300D Path Planner</title>
     <link rel="icon" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
@@ -194,7 +194,7 @@
 	<script>
 	  if ('serviceWorker' in navigator) {
 	    window.addEventListener('load', () => {
-	      navigator.serviceWorker.register('/path/sw.js', { scope: '.' })
+	      navigator.serviceWorker.register('/sw.js', { scope: '.' })
 	        .then((registration) => {
 	          console.log('Service Worker registered successfully:', registration.scope);
 	        })
