--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <select id="format-select" onchange="generateCode()">
 					<option value="libks-pid">libKW PID</option>
                     <option value="libks-mtpoint">libKW Odom MTPoint</option>
+                    <option value="evian-pid">Evian PID</option>
                     <option value="custom">Custom Format</option>
                 </select>
             </div>
@@ -94,6 +95,9 @@
 
 	    <label for="max-speed">Maximum Speed:</label>
 	    <input type="number" id="max-speed-input" value="127"><br>
+
+	    <label for="speed">Speed (0-1):</label>
+	    <input type="number" id="speed-input" value="1" min="0" max="1" step="0.1"><br>
 
 	    <label for="timeout">Timeout (ms):</label>
 	    <input type="number" id="timeout-input" value="2000"><br>
