--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	    <label for="angle">Rotation (degrees):</label>
 	    <input type="number" id="angle-input"><br>
 
-		<!-- <label for="include-turn">Include Turning:</label>
+		<label for="include-turn">Include Turning:</label>
 		<select id="include-turn-input">
 	        <option value="true">True</option>
 	        <option value="false">False</option>
@@ -88,7 +88,7 @@
 	    <input type="number" id="min-speed-input" value="0"><br>
 
 	    <label for="max-speed">Maximum Speed:</label>
-	    <input type="number" id="max-speed-input" value="127"><br> -->
+	    <input type="number" id="max-speed-input" value="127"><br>
 
 	    <label for="speed">Speed (0-1):</label>
 	    <input type="number" id="speed-input" value="1" min="0" max="1" step="0.1"><br>
