--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <option value="libks-mtpoint">libKW Odom MTPoint</option> -->
                     <option value="evian-pid">Evian PID</option>
                     <option value="evian-seeking">Evian Seeking</option>
+                    <option value="evian-fuckyou">Evian fuckyou</option>
                     <option value="plaintext-commands">Plaintext Commands</option>
                     <option value="custom">Custom Format</option>
                 </select>
