fixing thingys also added a button to reflect abt x axis

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="horizontal-buttons">
                 <button onclick="copyCodeToClipboard()">Copy Code</button>
                 <button onclick="clearPath()">Clear Path</button>
+                <button onclick="reflectPathY()">Reflect Y</button>
             </div>
             <button onclick="openSimulation()">Simulate Robot</button>
             <button onclick="openSaveOptionsModal()" oncontextmenu="openCalibrationModal(event); return false;">Path Options</button>
